switched to rk3328_ddr_786MHz_v1.13.bin, some fixes for env vars, fixed board name

--- a/arch/arm/dts/rk3328-evb.dts
+++ b/arch/arm/dts/rk3328-evb.dts
@@ -10,7 +10,7 @@
 #include "rk3328-sdram-ddr3-666.dtsi"
 
 / {
-	model = "Rockchip RK3328 EVB";
+	model = "NOVAsom M7 (RK3328)";
 	compatible = "rockchip,rk3328-evb", "rockchip,rk3328";
 
 	chosen {
